# Mikan

./: .gitignore  LICENSE  Mikan.cabal  README.md  Semantics.bnf  Semantics.md  source.md
app/: Main.hs
docs/: Core-Core.html  Core-Evaluater.html  Core-Lexer.html  Core-Parser.html  Core-Type.html  Mikan.haddock  Mikan.html  Mikan.txt  Syntax.tex  doc-index.html  index.html  mini_Core-Core.html  mini_Core-Evaluater.html  mini_Core-Lexer.html  mini_Core-Parser.html  mini_Core-Type.html  mini_Mikan.html
docs/src/: Core.Core.html  Core.Evaluater.html  Core.Lexer.html  Core.Parser.html  Core.Type.html  Mikan.html
samplecode/: curry_and_lambda.mkn  if.mikan  omega.mikan  y.mikan
src/: Eval.hs  Indexing.hs  Lexer.hs  Main.hs  Mikan.hs  Parser.hs  Types.hs
src/Core/: Core.hs  Evaluater.hs  Lexer.hs  Parser.hs  Type.hs
test/: Spec.hs  doctest.hs
