name:                Mikan
version:             0.0.3
-- synopsis:
-- description:
homepage:            https://github.com/eliza0x/Mikan#readme
license:             MIT
license-file:        LICENSE
author:              Sohei Yamaga
maintainer:          me@eliza.link
copyright:           2017 Sohei Yamaga.
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mikan
                     , Core.Type
                     , Core.Lexer
                     , Core.Parser
                     , Core.Evaluater
                     , Core.Core
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , exceptions
                     , mtl
                     , containers
  default-language:    Haskell2010

executable mikan
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Mikan
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Mikan
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             doctest.hs
  build-depends:       base
                     , Mikan
                     , doctest
  ghc-options:         -rtsopts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eliza0x/Mikan
